# tyaf

./: LICENSE  Makefile  README.md  pyproject.toml
example/: employee.typ  me.json  plain.typ  pyhanko.yml
tool_example/: __init__.py  main.py
tyaf/: __init__.py  field.py  main.py  signature.py  util.py
