[project]
name = "tyaf"
version = "0.1.0"
description = "Adds AcroForm fields to existing PDF files using pyhanko and pypdf"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyhanko==0.35.2",
    "pypdf==6.14.2",
    "reportlab>=5.0.0",
    "typst>=0.15.0",
]

[project.scripts]
tyaf = "tyaf:main"

# Helpers for uv
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
